Update to Java 9 standards